# frakt

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  generate-rustdoc.sh
.cargo-husky/hooks/: pre-commit
.github/workflows/: rust.yml
complex/: Cargo.toml
complex/src/: complex.rs  lib.rs
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/complex/: all.html  fn.add.html  index.html
doc/main/: all.html  index.html
doc/server/: all.html  fn.add.html  index.html
doc/shared/: all.html  fn.add.html  index.html
doc/src/complex/: lib.rs.html
doc/src/main/: main.rs.html
doc/src/server/: lib.rs.html
doc/src/shared/: lib.rs.html
doc/src/worker/: lib.rs.html
doc/worker/: all.html  fn.add.html  index.html
docs/: README.md
fractal/: Cargo.toml
fractal/src/: computer.rs  fractal.rs  generator.rs  iterated_sin_z_fraktal.rs  jullia_fractal.rs  lib.rs  mandelbrot_fractal.rs
fractal/src/computer/: julia.rs
fractal_old/: Cargo.toml
fractal_old/src/: jullia_fractal.rs  lib.rs
frakt/: Cargo.toml
local_fractal/: Cargo.toml
local_fractal/src/: lib.rs  local_fractal.rs
network/: Cargo.toml
network/src/: client.rs  fragment_request.rs  fragment_result.rs  fragment_task.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
shared/: Cargo.toml
shared/src/: fragement_request.rs  fragment_result.rs  fragment_task.rs  lib.rs  shared_structs.rs
src/: main.rs
worker/: Cargo.toml
worker/src/: lib.rs  worker.rs
