[package]
name = "frakt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
complex = { path = "complex" }
local_fractal = { path = "local_fractal" }
fractal = {path = "fractal"}
server = { path = "server" }
shared = { path = "shared" }
worker = { path = "worker" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["complex", "server", "shared", "worker",]

[dev-dependencies]
rustfmt = "0.10.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]