[package]
name = "frakt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
complex = { path = "complex" }
server = { path = "server" }
fractal = { path = "fractal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
network = { version = "0.1.0", path = "network" }

[workspace]
members = ["complex", "server", "fractal", "network"]

[dev-dependencies]
rustfmt = "0.10.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
