[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
local_fractal = { path = "../local_fractal" }
fractal ={ path = "../fractal"}
serde = "1.0"
serde_json = "1.0"
image = "0.24.7"
